<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="16dp">
            <Button
                android:id="@+id/form_back_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <EditText
                android:hint="@string/date_form"
                android:id="@+id/sleep_form_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <EditText
                android:id="@+id/sleep_form_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/sleeping"/>

            <EditText
                android:id="@+id/sleep_form_awake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/wakeup"/>

            <Button
                android:id="@+id/sleep_form_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveBtn" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>