<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sleep_item_date"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:hint="@string/date_ex"/>
        <TextView
            android:id="@+id/sleep_item_awake"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:hint="@string/wake_ex"/>

    </LinearLayout>
        <TextView
            android:id="@+id/sleep_list_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:hint="@string/sleep_ex" />


</LinearLayout>