<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="285dp" />

            <EditText
                android:id="@+id/register_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="285dp" />

            <EditText
                android:id="@+id/register_re_password"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="285dp" />

            <Button
                android:text="@string/register_account"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:id="@+id/newAccount"
                android:layout_width="285dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>